[FIX] Align checkbox label and ui-select label to the top

--- a/scss/core/elements/input/checkbox.radio/_input.checkbox.radio.common.scss
+++ b/scss/core/elements/input/checkbox.radio/_input.checkbox.radio.common.scss
@@ -42,8 +42,7 @@
 
 				&:after {
 					position: absolute;
-					top: 50%;
-					transform: translateY(-50%);
+					top: 1px;
 					left: 0;
 					display: inline-block;
 					width: 1.1em;
